--- a/style.css
+++ b/style.css
@@ -521,18 +521,136 @@ footer{
     color: #252525;
     font-size: 0.9rem;
 }
-
-@media screen and (max-width:500px  ) {
-    .new_products {
-        width: 90%;
-        height: 560px;
+@media(max-width:1100px) {
+.footer-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 40px
+}
+.new-product-container {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+.product-grid-3 {
+    grid-template-columns: 1fr 1fr;
+}
+}
+@media(max-width:1000px) {
+    .product-grid-half {
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 200px;
+        max-height: 100%;
     }
-    .new-p-heading {
-        width: 85%;
+    .product-grid-half .product-grid-box1 {
+        grid-column: 1/3;
+        grid-row: 1/2;
+        height: 300px;
+    }
+}
+@media(max-width:900px) {
+    #main{
+        display: flex;
+        flex-direction: column-reverse;
+    }
+    .main-text {
+        margin-top: 40px;
+        margin-bottom: 10px;
+    }
+    .popular-container {
+        grid-template-columns: 1fr 1fr;
+    }
+    .logo-container {
+        margin: 20px;
+        justify-content: flex-start;
+    }
+    .logo-container img{
+        height: 40px;
+    }
+}
+@media(max-width:760px) {
+    .navigation {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+    .search-box {
+        grid-row: 2/3;
+        grid-column: 1/3;
+        width: 100%;
+        margin-top: 10px;
+        border-radius: 4px ;
+    }
+    .nav-btns {
         margin-left: auto;
-        margin-right: auto;
+    }
+    .logo {
+        height: 45px;
+    }
+    #main {
+        padding: 20px;
+    }
+    .main-text h1 {
+        font-size: 1.8rem;
+    }
+    .product-grid-3 {
+        grid-template-columns: 1fr;
+    }
+    .new-p-heading h3,
+    .popular-heading h3,
+    .partner-heading h3 {
+        font-size: 1.3rem;
+    }
+    .new-product-container {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+    .product-grid-half {
+        grid-template-columns: 1fr;
+        grid-template-rows: auto;
+        grid-auto-rows: auto;
+    }
+    .product-grid-half .product-grid-box1 {
+         grid-column: 1/2;
+         height: auto;
+    }
+    .product-grid-half .product-grid-box1 .product-grid-text strong {
+        font-size: 1.2rem;
+    }
+    .product-grid-2 {
+        grid-template-columns: 1fr;
+    }
+}
+@media(max-width: 600px) {
+    .new-p-heading {
+        flex-direction: column;
     }
     .new-p-heading ul {
-        width: 300px;
+        margin-top: 10px;
+    }
+    .new-product-container {
+        grid-template-columns: 1fr 1fr;
+    }
+    .popular-container {
+        grid-template-columns: 1fr;
+    }
+    .product-grid-box {
+        padding: 20px 20px 0px 20px;
+    }
+    .product-grid-box img {
+        height: 90%;
+        width: 70%;
+        object-position: bottom right;
+        margin-top: auto;
+        object-fit: contain;
+    }
+    .product-grid-half .product-grid-box1 .product-grid-text-strong {
+        font-size: 1rem;
+        line-height: 1.2rem;
+        max-width: 120px;
+    }
+    .footer-container {
+        grid-template-columns: 1fr;
+    }
+}
+@media(max-width: 320px) {
+    .new-product-container {
+        grid-template-columns: 1fr;
     }
 }
